Stop the podcast names from wrapping. Remove max-width

--- a/main.css
+++ b/main.css
@@ -34,7 +34,6 @@ h1, h2, h3, h4, h5, h6 {
         font-family: "Roboto Mono";
         color: #93a1a1;
         margin: auto;
-        max-width: 640px;
 }
 
 #body audio {
